discussion/kv_engine/140012/140012_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] use cb::tracing::Traceable as cookie in tests

Previously we passed around const void*, and this is a step on the
migration path for cookies to be passed as cb::tracing::Traceable

Change-Id: Ic9a7bd71605299a6cc9ab03460b0af5f46f3c2c1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-11-11 15:17:07.000000000
Message: 
Uploaded patch set 5: Patch Set 4 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-11-11 16:26:44.000000000
Message: 
Patch Set 5: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31701/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_full_eviction
..\kv_engine\engines\ep\tests\module_tests\item_pager_test.cc(1133): error: Expected: (activeRR) < (100), actual: 100 vs 100
[  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_full_eviction, where GetParam() = ("persistent", "full_eviction") (2577 ms)
EphemeralOrPersistent/STItemPagerTest.ActiveEvictedIfReplicaEvictionInsufficient/persistent_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31701/ )

Failure of a CTest test 231/394 Test #214: ep-engine_ep_unit_tests.EphemeralOrPersistent/STItemPagerTest ................................................................. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31701/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5575/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1803:5: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    cb::tracing::Traceable* cookie[max_conns];
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:3259:5: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    cb::tracing::Traceable* cookie[5];
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5575/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4107/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27371/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6971/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6041/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14894/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7086/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7299/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-11-11 19:32:30.000000000
Message: 
Patch Set 5:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5575/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:1803:5: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    cb::tracing::Traceable* cookie[max_conns];
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:3259:5: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    cb::tracing::Traceable* cookie[5];
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5575/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4107/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27371/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6971/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6041/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14894/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7086/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7299/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31705/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2020-11-12 08:10:47.000000000
Message: 
Patch Set 5: Verified+1

Override clang-tidy as that change is not related to this change (no c-style arrays)
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2020-11-12 08:10:50.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
